Some image changes

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <div class="w-full md:w-4/12 ml-auto mr-auto px-4" data-aos="flip-right" data-aos-delay="1000">
                         <!-- Image -->
                         <img alt="..." class="max-w-full rounded-lg shadow-lg"
-                            src="https://o.remove.bg/downloads/5a57eb1c-2106-4e17-956e-c0bdbc8d15b7/image-removebg-preview.png" />
+                            src="https://uploads-ssl.webflow.com/606c7df2f78c3e070777a788/6231e8d96ea50222dbb37608_QmAz5cRuE9S8FgLdEtYuOIsk6gY62n-Q3SJwmH-Id0fNBGO0vB38RFEBOAeNBz2vqSM9hZlu6MBrlB3zwiJfBeaM3h8WRwaEQoKjsdD7tAYZwj41-4hFch7rMruT_gyBc9LAYArN.jpeg" />
                     </div>
                     <!-- Text Box Container-->
                     <div class="w-full md:w-5/12 ml-auto mr-auto px-4" data-aos="zoom-ing-left" data-aos-delay="1000">
